--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <div class="container">
         <h1>SpongeBob</h1>
-        <img src="images/spongebob headshot.webp" alt="Spongebob headshot" width="300" />
+        <img src="spongebob headshot.webp" alt="Spongebob headshot" width="300" />
 
         <p><strong>Email:</strong> spongebob@thekrustykrab.com</p>
         <p><strong>Phone:</strong> (334) 441-8088</p>
@@ -90,7 +90,7 @@
         <hr>
 
         <h2>Gallery</h2>
-        <img src="images/sponge bob working.jpg" alt="Spongebob working" width="300" />
+        <img src="sponge bob working.jpg" alt="Spongebob working" width="300" />
 
     </div>
 </body>
